--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
                                     alt="Logo do Instagram"></a>
                         </li>
                         <li>
-                            <a href="#" title="Siga-nos no Facebook"><img src="./images/Facebook.png"
+                            <a href="#" title="Siga-nos no Facebook"><img src="./images/facebook.png"
                                     alt="Logo do Facebook"></a>
                         </li>
                         <li>
-                            <a href="#" title="Visite nosso canal no Youtube"><img src="./images/Youtube.png"
+                            <a href="#" title="Visite nosso canal no Youtube"><img src="./images/youtube.png"
                                     alt="Logo do Youtube"></a>
                         </li>
                     </ul>
